save lead info to server
